try replacing all CDN calls with local calls - fix cmd 34

--- a/scripts/install
+++ b/scripts/install
@@ -23,8 +23,10 @@ ynh_replace --match='from "picmo";' --replace='from "../../picmo/dist/index.js"'
 ynh_replace --match='https://unpkg.com/@picmo/popup-picker@latest/dist/index.js?module' --replace='./libs/picmo_popup_picker/dist/index.js' --file="$install_dir/src/script.js"
 
 ## Add required lines so that picmo library uses local emojibase lib instead of CDN's - https://github.com/joeattardi/picmo/blob/main/docs/docs/02%20-%20usage/06%20-%20emoji-data.md#provided-static-data 
-echo -e "import emojiData from './libs/emojibase/packages/data/en/data.json' with { type: 'json' };\nimport messages from './libs/emojibase/packages/data/en/messages.json' with { type: 'json' };\n$(cat $install_dir/src/script.js)" > "$install_dir/src/script.js"
-sed -i '/emojiPicker = createPopup({/a \ \ \ \ emojiData,\n    messages,' "$install_dir/src/script.js"
+#~ echo -e "import emojiData from './libs/emojibase/packages/data/en/data.json' with { type: 'json' };\nimport messages from './libs/emojibase/packages/data/en/messages.json' with { type: 'json' };\n$(cat $install_dir/src/script.js)" > "$install_dir/src/script.js"
+echo -e "let emojiData = [];\nlet messages = [];\nfetch('./libs/emojibase/packages/data/en/data.json').then(response => emojiData = response.json());\nfetch('./libs/emojibase/packages/data/en/messages.json').then(response => messages = response.json());
+\n$(cat $install_dir/src/script.js)" > "$install_dir/src/script.js"
+#~ sed -i '/emojiPicker = createPopup({/a \ \ \ \ emojiData,\n    messages,' "$install_dir/src/script.js"
 
 # Remove CDN link for lib emojibase
 ynh_setup_source --dest_dir="$install_dir/src/libs/emojibase" --source_id="emojibase"
